# AI_API_Services

./: db.sqlite3  pyproject.toml  requirements.txt
Backend/: app.py
Backend/db/: db_setup.py
Backend/models/: models.py
Backend/routes/: services.py  user.py
Backend/schemas/: schema.py
Backend/services/: user_queries.py
Backend/settings/: configurations.py
